2011-08-14  Simson Garfinkel  <simsong@t.nitroba.org>

	* src/display.cpp (error): removed print_error(), since it did the same thing that error() did.

	* src/main.h (d): added __attribute__ ((__noreturn__)) to fatal_error

2011-08-12  Simson Garfinkel  <simsong@t.nitroba.org>

	* src/display.cpp (error): always puts progname on error now. removed explicit "%s: " and progname from practially every place error was called.

2011-08-09  Simson Garfinkel  <simsong@imac3.home>

	* src/main.h (std::vector): changed hashmap from a map to a multimap

2011-08-07 Jesse Kornblum 
	* man/md5deep.1: Updated version number
	* man/hashdeep.1: Restored to earlier version
	* man/Makefile.am: Corrected clobbering of hashdeep man page
	* src/Makefile.am: Corrected typo in the symbolic linking

	* src/ui.cpp: Vestigial file removed

2011-08-01  Simson Garfinkel  <simsong@Alphonse-Mucha.local>

	* src/main.h (class file_data_hasher_t): moved read_offset and read_len from file_data_t to file_data_hasher_t
	(class file_data_hasher_t): moved timestamp from file_data_t to file_data_hasher_t

	* src/display.cpp (file_data_hasher_t::compute_dfxml): fdht->dfxml_hash is now a string stream

	* src/hash.cpp (file_data_hasher_t::hash): whoops; dfxml had old bytes=; replaced with len=;

2011-07-31  Simson Garfinkel  <simsong@alphonse-mucha.local>

	* src/hash.cpp (display::hash_stdin): sets stat_bytes to SIZE_T_MAX when hashing stdin.

2011-07-27  Simson Garfinkel  <simsong@imac3.local>

	* src/main.h (class display): added conditional defines so that wstring stuff isn't compiled on mac

2011-07-27  Simson Garfinkel  <simsong@t.nitroba.org>

	* configure.ac: now compiles with and without PTHREAD, and on win32 and win64
	updated version to 4.0.0_alpha_001

	* src/hash.cpp (hash): triage mode no longer works on stdin

2011-07-26  Simson Garfinkel  <simsong@t.nitroba.org>

	* src/main.cpp (main): main is now a method of state.

2011-07-22  Simson Garfinkel  <simsong@Alphonse-Mucha.local>
